src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/UnknownVirtualMachineTypeException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class UnknownVirtualMachineTypeException extends InvalidParametersException {

        public UnknownVirtualMachineTypeException() {
            super("Unknown virtual machine type");
        }
}
